[package]
name = "nixpeer"
version = "0.1.0"
edition = "2024"
description = "Compare NixOS systems, locally or peer-to-peer"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
owo-colors = "4"
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
n0-error = "0.1"
data-encoding = "2"
